--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,8 @@ font-family: 'Poppins', sans-serif;
 body{
 	font-family: 'Poppins', sans-serif;
 	font-size:16px;
-	color: #676a81;
+	/*color: #676a81;*/
+    color: #080a1a;
 	background: #fff;
     max-width:1920px;
     margin:0 auto;
@@ -119,7 +120,7 @@ nav.navbar.bootsnav {
 /*.navbar-brand*/
 .navbar-header a.navbar-brand,.navbar-header a.navbar-brand:hover,.navbar-header a.navbar-brand:focus {
     display: inline-block;
-    color: #2ca0f9;
+    color: #d92cf9;
     font-size: 20px;
     font-weight: 600;
     padding: 33px 0px 57px;
