--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ nav.navbar.bootsnav {
 /*.navbar-brand*/
 .navbar-header a.navbar-brand,.navbar-header a.navbar-brand:hover,.navbar-header a.navbar-brand:focus {
     display: inline-block;
-    color: #b30944d9;
+    color: #ca0f73d9;
     font-size: 20px;
     font-weight: 600;
     padding: 33px 0px 57px;
@@ -148,7 +148,7 @@ nav.navbar.bootsnav ul.nav > li.dropdown span {
     font-size: 8px;
     margin-left: 15px;
 }
-.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a {color:#6a708e;}
+.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a {color:#2f323e;}
 .sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:hover,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li > a:focus,.sticky-wrapper.is-sticky nav.navbar.bootsnav ul.nav > li.active>a{color:#b30944d9;}
 /*.nav li*/
 
@@ -200,7 +200,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #b30944d9;}
     content: " ";
     top:0;
     left:0;
-    background:rgba(31,44,108,.65);
+    background:#2f323e;
     width:100%;
     height:100%;
 }
