--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -2773,14 +2773,18 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #F85C70;
-  border-color: #F85C70;
+   background-color: #52ecfd;
+  border-color: #52ecfd;
+  /* background-color: #F85C70;
+  border-color: #F85C70; */
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #f63750;
-  border-color: #f62b45;
+    background-color: #44d8e8;
+  border-color: #44d8e8;
+  /* background-color: #f63750;
+  border-color: #f62b45; */
 }
 
 .btn-primary:focus, .btn-primary.focus {
