--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -2773,16 +2773,16 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-   background-color: #52ecfd;
-  border-color: #52ecfd;
+   background-color: #1bded7;
+  border-color: #1bded7;
   /* background-color: #F85C70;
   border-color: #F85C70; */
 }
 
 .btn-primary:hover {
   color: #fff;
-    background-color: #44d8e8;
-  border-color: #44d8e8;
+    background-color: #17b5af;
+  border-color: #17b5af;
   /* background-color: #f63750;
   border-color: #f62b45; */
 }
