--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -591,10 +591,11 @@ pre code {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
-    /* add padding in a top */
-    padding-top: 5px;  
-  margin-right: auto;
-  margin-left: auto;
+    /* add padding in a top
+    padding-top: 5px;  */
+  margin: 5% 5%; 
+  /* margin-right: auto;
+  margin-left: auto; */
 }
 
 .row {
