--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -593,7 +593,7 @@ pre code {
   padding-left: 15px;
     /* add padding in a top
     padding-top: 5px;  */
-  margin: 5% 5%; 
+  margin: 5% 5% 5% 5%; 
   /* margin-right: auto;
   margin-left: auto; */
 }
