--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -64,7 +64,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -591,7 +591,7 @@ pre code {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
-  padding-top: 10px
+  padding-top: 10px;
   margin-right: auto;
   margin-left: auto;
 }
