--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -559,6 +559,7 @@ pre code {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
+  margin-top: 10px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -587,14 +588,6 @@ pre code {
   }
 }
 
-.container2 {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  padding-top: 10px;
-  margin-right: auto;
-  margin-left: auto;
-}
 
 .row {
   display: -webkit-box;
