--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -10970,8 +10970,9 @@ a.text-dark:hover, a.text-dark:focus {
 
 /* typography */
 p {
-  font-size: calc(13px + (14 - 13) * ((100vw - 300px) / (1300 - 300)));
-  opacity: .8;
+  /* font-size: calc(13px + (14 - 13) * ((100vw - 300px) / (1300 - 300))); */
+  font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1300 - 300)));
+  opacity: .9;
   color: #444;
 }
 
