--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11296,6 +11296,7 @@ p {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+     padding: 30px 20px 30px 30px;
 }
 
 .blog-card .content-holder {
