--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11293,7 +11293,7 @@ p {
 
 .blog-card .img-holder img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   -o-object-fit: cover;
      object-fit: cover;
      padding: 30px 20px 30px 30px;
@@ -11325,14 +11325,14 @@ p {
   display: inline-block;
   font-weight: 600;
   opacity: .7;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .blog-card .content-holder .read-more {
   text-decoration: none;
   margin-top: 20px;
   display: block;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .blog-card .content-holder .read-more i {
