--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -10906,7 +10906,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 /* typography */
-p {
+p, ul {
   /* font-size: calc(13px + (14 - 13) * ((100vw - 300px) / (1300 - 300))); */
   font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1300 - 300)));
   opacity: .9;
