--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -505,17 +505,13 @@ pre code {
   width: 100%;
   height: 80vh;
   min-height: 200px;
-}
-
-.container_title img{
   background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  color: #fff;
-
+  /* color: #fff; */
 }
 
 @media (min-width: 576px) {
