--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -503,7 +503,7 @@ pre code {
 
 .container_title {
   width: 100%;
-  height: 80vh;
+  height: 40vh;
   min-height: 200px;
   background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
@@ -511,6 +511,7 @@ pre code {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  text-align: center;
   /* color: #fff; */
 }
 
