--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -503,11 +503,11 @@ pre code {
 
 .container_title {
   width: 100%;
-  height: 40vh;
-  min-height: 200px;
+  height: 20vh;
+  min-height: 100px;
   background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
-  background-size: cover;
+  background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -518,6 +518,8 @@ pre code {
 .container_title .subtitle {
   font-weight: 200;
   font-size: calc(20px + (45 - 20) * ((100vw - 300px) / (1600 - 300)));
+  text-align: center;
+  color: #fff;
 }
 
 @media (min-width: 576px) {
