--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -508,9 +508,9 @@ pre code {
   background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: left;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: local;
   color: #fff;
 }
 
