--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -505,8 +505,6 @@ pre code {
   width: 100%;
   height: 30vh;
   min-height: 150px;
-  /* background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg);
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/career.jpg); */
   background-size: cover;
   background-position: left;
   background-repeat: no-repeat;
@@ -11247,11 +11245,14 @@ p, ul {
   margin-bottom: 30px;
   overflow: hidden;
   margin: 0 15px 30px;
+
 }
 
 .blog-card .img-holder {
-  min-width: 250px;
-  max-width: 250px;
+  /* min-width: 250px; */
+  /* max-width: 250px; */
+  width: 25%;
+  
 }
 
 .blog-card .img-holder img {
