--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11245,7 +11245,8 @@ p, ul {
   border: 1px solid #dee2e6;
   margin-bottom: 30px;
   overflow: hidden;
-  margin: 0 15px 30px;
+  margin: 0 0px 30px;
+  width: 100%;
 
 }
 
