--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11259,7 +11259,7 @@ p, ul {
 
 .blog-card .img-holder img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   -o-object-fit: cover;
      object-fit: cover;
      padding: 30px 20px 30px 30px;
