--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11253,7 +11253,8 @@ p, ul {
 .blog-card .img-holder {
   /* min-width: 250px; */
   /* max-width: 250px; */
-  width: 15%;
+  padding: 30px;
+  width: 20%;
   
 }
 
@@ -11266,7 +11267,7 @@ p, ul {
 }
 
 .blog-card .content-holder {
-  width: 85%;
+  width: 80%;
   padding: 30px 20px 30px 30px;
 }
 
