--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11253,7 +11253,7 @@ p, ul {
 .blog-card .img-holder {
   /* min-width: 250px; */
   /* max-width: 250px; */
-  padding: 30px;
+  padding: 30px 0px 30px 0px;
   width: 20%;
   
 }
@@ -11263,7 +11263,7 @@ p, ul {
   /* height: 100%; */
   -o-object-fit: cover;
      object-fit: cover;
-     padding: 30px 20px 30px 30px;
+     /* padding: 30px 20px 30px 30px; */
 }
 
 .blog-card .content-holder {
