--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11253,7 +11253,12 @@ p, ul {
 
 .blog-card .img-holder {
   padding: 40px 25px 30px 25px;
-  width: 20%;
+  width: 15%;
+}
+
+.blog-card .date-holder {
+  padding: 40px 5px 30px 5px;
+  width: 10%;
 }
 
 .blog-card .img-holder img {
@@ -11263,7 +11268,7 @@ p, ul {
 }
 
 .blog-card .content-holder {
-  width: 80%;
+  width: 75%;
   padding: 30px 20px 30px 30px;
 }
 
