--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11258,7 +11258,10 @@ p, ul {
 
 .blog-card .date-holder {
   margin-top: 30px;
-  font-size: 20px;
+  /* font-size: 20px; */
+  letter-spacing: 5px;
+  font-weight: 500;
+  font-size: calc(12px + (19 - 12) * ((100vw - 300px) / (1600 - 300)));
   text-align: center;
 }
 
