--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11135,7 +11135,7 @@ p, ul {
   border-radius: 0;
   padding-bottom: 4px;
   margin: 0 auto 20px;
-  max-width: 400px;
+  max-width: 600px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -11152,9 +11152,9 @@ p, ul {
           flex-basis: 0;
   display: block;
   color: #212529;
-  font-size: 13px;
+  font-size: calc(12px + (14 - 12) * ((100vw - 300px) / (1600 - 300)));
   font-weight: 500;
-  opacity: .7;
+  opacity: .8;
   padding: 4px 10px;
   transition: 0.3s;
   -webkit-transition: 0.3s;
