--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11139,7 +11139,7 @@ p, ul {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
+  display: inline-flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
