--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11136,7 +11136,6 @@ p, ul {
   padding-bottom: 4px;
   margin: 0 auto 20px;
   max-width: 600px;
-  height: 20px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -11151,7 +11150,7 @@ p, ul {
   -webkit-flex-basis: 0;
       -ms-flex-preferred-size: 0;
           flex-basis: 0;
-  display: flex;
+  display: inline-block;
   color: #444;
   font-size: calc(12px + (14 - 12) * ((100vw - 300px) / (1600 - 300)));
   font-weight: 500;
