--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11147,10 +11147,10 @@ p, ul {
 }
 
 .portfolio .filters a {
-  -webkit-flex-basis: 0;
+  /* -webkit-flex-basis: 0;
       -ms-flex-preferred-size: 0;
-          flex-basis: 0;
-  display: inline-block;
+          flex-basis: 0; */
+  display: block;
   color: #444;
   font-size: calc(12px + (14 - 12) * ((100vw - 300px) / (1600 - 300)));
   font-weight: 500;
