--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11157,9 +11157,6 @@ p, ul {
 }
 
 .portfolio .filters a {
-  /* -webkit-flex-basis: 0;
-      -ms-flex-preferred-size: 0;
-          flex-basis: 0; */
   display: block;
   color: #444;
   font-size: calc(12px + (14 - 12) * ((100vw - 300px) / (1600 - 300)));
@@ -11184,7 +11181,7 @@ p, ul {
 
 .portfolio .filters a.active {
   opacity: 1;
-  background: #1ac7c1;
+  background: #17a6a1;
   color: #fff;
 }
 
