--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11156,10 +11156,25 @@ p, ul {
           justify-content: space-between;
 }
 
+.portfolio .descripcion {
+  border-radius: 0;
+  padding-bottom: 2px;
+  margin: 0 auto 20px;
+  max-width: 600px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .portfolio .filters a {
   display: block;
   color: #444;
-  font-size: calc(12px + (14 - 12) * ((100vw - 300px) / (1600 - 300)));
+  font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300)));
   font-weight: 500;
   opacity: .8;
   padding: 4px 10px;
