--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11158,10 +11158,9 @@ p, ul {
 
 .portfolio .descripcion {
   border-radius: 0;
-  border: 2px solid #dee2e6;
   padding-bottom: 2px;
-  margin: 0 auto 20px;
-  max-width: 600px;
+  padding-left: 2px;
+  padding-right: 2px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
