--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -2746,7 +2746,8 @@ textarea.form-control {
 }
 
 .btn:hover {
-  color: #212529;
+  /* color: #212529; */
+  color: #fff;
   text-decoration: none;
 }
 
