--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11310,7 +11310,8 @@ p, ul {
 .price-card .img-holder {
   padding: 10px;
   width: 50%;
-  margin-left: 20%;
+  margin-left: 25%;
+  margin-bottom: 5px;
 }
 
 .blog-card .date-holder {
