--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11384,6 +11384,7 @@ p, ul {
   margin-top: 20px;
   display: block;
   font-size: 14px;
+  color: #1ac7c1;
 }
 
 .blog-card .content-holder .read-more i {
